   You may also set the default mutaiton-type for quick mutations in the Preferences (property tinaQuickMutationDefaultMutationType).
 - new RandomAffineZ-mutation (which both can be used in Quick Mutations and the regular MutaGen module)
 - new variations:
     -cut_kleinian,
     -cut_mandala by Jesus Sosa
     -hypertile3D2b,
     -hypertile3Db,
     -petal3D,
     -pdj3D by Brad Stefanov
 - removed the "Randomize"-tab (all of it's features are still available, at the "Quick mutations"-tab in the form
   of mutations)
 - the advanced code editor (which is used for editing scripts or large text) is now disabled per default
   (which works better for dark themes). You may activate it by setting the property tinaAdvancedCodeEditor
   in the Preferences to true.

V6.05 (21.10.2020)
 - new Steam Edition for more simple distribution on Windows (and maybe later Linux)

V6.04 (17.10.2020)
 - when using a denoiser, the alpha channel (transparent background) is preserved
 - made the main preview a little bit more responsive
 - fixed a bug in the mp4-encoder (causing an java.lang.ArrayIndexOutOfBoundsException)
 - added some simple heuristics to add the name of the script-author to the title of the flame,
   when using the RunRandomScript-random-flame-generator

V6.03 (06.10.2020)
 - several fixes regarding file-access under macOS Catalina, especially:
     - user-scripts- and user-gradients can be accessed now
     - creating new scripts and and gradients works now
 - removed the "scriptPath"-setting from the Prefs. This setting was nearly unused and was often confused with
   "tinaJWFScriptPath"-setting (to set the path for flame-scripts)

V6.02 (04.10.2020)
 - force to enter a valid file-extension in the file-dialogs, when saving a file under macOS, otherwise saving
   would fail later due to security reasons
 - removed the old post-denoiser at the Antialiasing/Filter-tab (it is recommended to use AI-denoiser instead)